--- a/webcsi1.html
+++ b/webcsi1.html
@@ -71,9 +71,9 @@
 				<h3 class="a1" style="color: grey;">COMPANY</h3>	
 				<div class="pst pady">
 				<ul>
-					<a style="color: white;" href="https://www.spotify.com/in/about-us/contact/" >About</a>
-					<a style="color: white;" href="https://www.spotifyjobs.com/?_ga=2.164498936.676282055.1549974792-722955707.1549610878">Jobs</a>
-					<a style="color: white;" href="https://newsroom.spotify.com/?_ga=2.164498936.676282055.1549974792-722955707.1549610878">For the Record</a>
+					<li><a style="color: white;" href="https://www.spotify.com/in/about-us/contact/" >About</a></li>
+					<li><a style="color: white;" href="https://www.spotifyjobs.com/?_ga=2.164498936.676282055.1549974792-722955707.1549610878">Jobs</a></li>
+					<li><a style="color: white;" href="https://newsroom.spotify.com/?_ga=2.164498936.676282055.1549974792-722955707.1549610878">For the Record</a></li>
 				</ul>
 			</div>
 		</div>
