--- a/webcsi1.html
+++ b/webcsi1.html
@@ -35,7 +35,7 @@
 	</div>
 
 	<div class="lower-part">
-		<h2 class="container1"><strong> Spotify gives you instant access to millions of songs – from old favorites to the latest hits. Just hit play to stream anything you like.</strong></h2>
+		<!---REMOVED CODE FROM HERE-->
 
 		<div class="cont1"><img src="https://www.scdn.co/i/generic/premium-img1.jpg" width="250" height="200">
 			<p> <strong>Listen Everywhere</strong></p>
